--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-elements": "^3.4.3",
@@ -29,6 +30,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
